cmake_minimum_required(VERSION 3.10)

PROJECT(ChieneseChess)

SET(CMAKE_CXX_STANDARD 17)

# MESSAGE(${CMAKE_CXX_FLAGS})

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
endif()

IF(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
    MESSAGE(STATUS "Try to build release type.")
ELSEIF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    MESSAGE(STATUS "Try to build debug type.")
ELSE()
    MESSAGE(FATAL_ERROR "Try to build unknow type.")
ENDIF()

INCLUDE_DIRECTORIES(include)

AUX_SOURCE_DIRECTORY(src DIR_SRCS)

# MESSAGE(${DIR_SRCS})

# FOREACH(FILE ${DIR_SRCS})
#     MESSAGE(${FILE})
# ENDFOREACH()

SET(FILES ${DIR_SRCS})

ADD_EXECUTABLE(${PROJECT_NAME} ${FILES})
